syntax = "proto3";

option csharp_namespace = "Saapp.AndroidAPI.Endpoints.GRPC.Amargar.GroupStatistician.Protos";
option java_multiple_files = true;
option java_package = "com.saphamrah.protos";
option java_outer_classname = "GroupStatisticianProto";
option objc_class_prefix = "HLW";

package Amargar;

service GroupStatistician{
  rpc GetGroupStatistician(GroupStatisticianRequest) returns(GroupStatisticianReplyList);
}

message GroupStatisticianRequest{

}

message GroupStatisticianReply{
  int32 GroupStatisticianID = 1;
  string groupStatisticianCode = 2;
  string groupStatisticianDescription = 3;
  int32 statusCode = 4;

}

message GroupStatisticianReplyList{
  repeated GroupStatisticianReply GroupStatisticianReplys = 1;
}